<resources>
    <string name="app_name">Astro</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagattarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>
    <string name="Aries">Aries</string>
    <string name="element">Element: </string>
    <string name="quality">Quality: </string>
    <string name="color">Color: </string>
    <string name="ruler">Ruler: </string>
    <string name="strength">Strength: </string>
    <string name="weakness">Weakness: </string>
    <string name="traits">Trait: </string>
    <string name="zodiacSign">Zodiac Sign:</string>
    <string name="gloss">Gloss:</string>
    <string name="date">Date:</string>
    <string name="horo">Today's Horoscope: </string>
    <string name="info">info: </string>
    <string name="earth">Earth</string>
    <string name="fire">Fire</string>
    <string name="air">Air</string>
    <string name="water">Water</string>
    <string name="fireSym">Like fire itself, fire signs tend to be passionate, dynamic, and temperamental. Fire can keep you warm, or it can do great destruction. While fire burns out quickly without fuel to keep it going, it can also regenerate its power from the ashes. A single spark can set off a forest fire.</string>
    <string name="earthSym">Earth signs keep it real. They are the “grounded” people on the planet, the ones who bring us down to earth and remind us to start with a solid foundation. Slow and steady, these “builders” are loyal and stable, and stick by their people through hard times. </string>
    <string name="airSym">Air signs are all about action, ideas, and motion—they are the “winds of change.” When a strong gust hits you, you can’t help but move. While some within their ranks may be true-life “airheads,” others are as powerful as a gravity-defying G-force. Air signs bring everyone a breath of fresh air when things start to get stale.</string>
    <string name="waterSym">Intuitive, emotional and ultra-sensitive, water signs can be as mysterious as the ocean itself. Like water, they can be refreshing, or they can drown you in their depths. These signs often have intense dreams and borderline-psychic intuition. Security is important to them—after all, water needs a container, or it dries up and disappears.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main22">Main2Activity</string>
</resources>
