<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pujan.project2.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Aries"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aries1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Taurus"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/taurus1" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Gemini"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gemini1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/Aries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/Gemini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="8dp"
        android:text="@string/Taurus"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Cancer"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/cancer1" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Leo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/leo1" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Virgo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/virgo1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="9dp"
        android:text="@string/Cancer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="9dp"
        android:text="@string/Virgo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="79dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="9dp"
        android:text="@string/Leo"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Libra"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/libra1" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Scorpio"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/scorpio1" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Sagattarius"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/sagittarius1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="9dp"
        android:text="@string/Libra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="9dp"
        android:text="@string/Sagattarius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="9dp"
        android:text="@string/Scorpio"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Aquarius"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/capricorn1" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Aquarius"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButton15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton14"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/aquarius1" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Pisces"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/pisces1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="36dp"
        android:text="@string/Capricorn"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="1dp"
        android:text="@string/Pisces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="1dp"
        android:text="@string/Aquarius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/imageButton14" />
</android.support.constraint.ConstraintLayout>
